tests/calico_testcases/example_policies/calico-demo/interferes-scheme.yaml
namespaceList: ../../example_podlist/ns_list_wdc.json
podList: ../../example_podlist/wdc_wep.json

networkConfigList:
  - name: np-interfere1
    networkPolicyList:
      - demo-interfere1.yaml
      - demo-deny-all-wdc-wep-profiles.yaml
    expectedWarnings: 0

  - name: np-interfere2
    networkPolicyList:
      - demo-interfere2.yaml
      - demo-deny-all-wdc-wep-profiles.yaml
    expectedWarnings: 0

queries:
  - name: sanity
    sanity:
      - np-interfere1
      - np-interfere2
    expected: 0

  - name: interference
    interferes:
      - np-interfere2
      - np-interfere1
    expected: 1
