tests/calico_testcases/example_policies/calico-demo/sanity3-scheme.yaml
namespaceList: ../../example_podlist/ns_list_wdc.json
podList: ../../example_podlist/wdc_wep.json

networkPolicyLists:
  - name: np_redundacy
    networkPolicyList:
      - demo-sanity3-redundancy.yaml
      - demo-deny-all-wdc-wep-profiles.yaml
    expected_warnings: 0

queries:
  - name: sanity_redundancy
    sanity:
      - np_redundacy
    expected: 3
